kubernetes/namespaces/default/quant-ux/manifest.yml
###############################################################################
# Configuration file for Quant UX (Backend)
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quant-ux
  namespace: default
  labels:
    # The name of the application
    app.kubernetes.io/name: quant-ux
    # The component within the architecture
    app.kubernetes.io/component: uiux
    # The name of a higher level application this one is part of
    app.kubernetes.io/part-of: development-services
spec:
  replicas: 1
  selector:
    matchLabels:
      # The name of the application
      app.kubernetes.io/name: quant-ux
      # The component within the architecture
      app.kubernetes.io/component: uiux
      # The name of a higher level application this one is part of
      app.kubernetes.io/part-of: development-services
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        # The name of the application
        app.kubernetes.io/name: quant-ux
        # The component within the architecture
        app.kubernetes.io/component: uiux
        # The name of a higher level application this one is part of
        app.kubernetes.io/part-of: development-services
    spec:
      #
      # *** Pods distribution strategy ***
      #
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: "kubernetes.io/arch"
                  operator: In
                  values:
                    - amd64
      #
      # *** Containers specifications ***
      #
      containers:
        - name: mongodb
          image: mongo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - mountPath: /data/db
              name: pvc
              subPath: mongodb
        - name: quant-ux-be
          image: klausenschaefersinho/quant-ux-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /app-data
              name: pvc
              subPath: quant-ux-be
        - name: quant-ux-ws
          image: klausenschaefersinho/quant-ux-websocket:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8086
              protocol: TCP
        - name: quant-ux-fe
          image: klausenschaefersinho/quant-ux:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
              protocol: TCP
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: quant-ux
      #
      # *** Restart policy ***
      #
      restartPolicy: Always
###############################################################################
# Cluster IP configuration for the entire service
#
---
apiVersion: v1
kind: Service
metadata:
  name: quant-ux
  namespace: default
  labels:
    # The name of the application
    app.kubernetes.io/name: quant-ux
    # The component within the architecture
    app.kubernetes.io/component: uiux
    # The name of a higher level application this one is part of
    app.kubernetes.io/part-of: development-services
spec:
  selector:
    # The name of the application
    app.kubernetes.io/name: quant-ux
    # The component within the architecture
    app.kubernetes.io/component: uiux
    # The name of a higher level application this one is part of
    app.kubernetes.io/part-of: development-services
  type: ClusterIP
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
    - name: quant-ux-web
      protocol: TCP
      port: 8082
###############################################################################
# Ingress route configuration for the entire service
#
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: quant-ux
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
  labels:
    # The name of the application
    app.kubernetes.io/name: quant-ux
    # The component within the architecture
    app.kubernetes.io/component: uiux
    # The name of a higher level application this one is part of
    app.kubernetes.io/part-of: development-services
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - match: Host(`[QUX_DOMAIN]`)
      kind: Rule
      services:
        - name: quant-ux
          namespace: default
          port: quant-ux-web
